--- a/accounts/src/main/resources/application_test.yml
+++ b/accounts/src/main/resources/application_test.yml
@@ -1,34 +1,17 @@
-server:
-  port: 8999
-
-spring:
-  profiles:
-    default: local
-  config:
-    import:
-      - "application_test.yml"
-
----
 spring:
   config:
     activate:
-      on-profile: local
+      on-profile: test
   datasource:
     url: jdbc:h2:mem:testdb
     driverClassName: org.h2.Driver
     username: sa
     password: ''
-  h2:
-    console:
-      enabled: true
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     show-sql: true
     properties:
       hibernate:
         format_sql: true
-
-build:
-  version: "1.0"
