--- a/configserver/src/main/resources/config/loans-prod.yml
+++ b/configserver/src/main/resources/config/loans-prod.yml
@@ -1,29 +1,16 @@
-server:
-  port: 8997
-
 spring:
-  application:
-    name: loans
-  profiles:
-    active: prod
-  config:
-    import: "configserver:http://localhost:8071/"
-
-
----
-spring:
-  config:
-    activate:
-      on-profile: test
   datasource:
     url: jdbc:h2:mem:testdb
     driverClassName: org.h2.Driver
     username: sa
     password: ''
+  h2:
+    console:
+      enabled: true
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     show-sql: true
     properties:
       hibernate:
