--- a/cards/src/main/resources/application.yml
+++ b/cards/src/main/resources/application.yml
@@ -8,7 +8,17 @@ spring:
     active: prod
   config:
     import: "configserver:http://localhost:8071/"
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
 
 ---
 spring:
