--- a/configserver/src/main/resources/application.yml
+++ b/configserver/src/main/resources/application.yml
@@ -5,15 +5,30 @@ spring:
   application:
     name: "configserver"
   profiles:
-      active: native
+      active: git
   cloud:
     config:
       server:
-        native:
-          search-locations: classpath:/config
-#        git:
-#          uri: "https://github..."
-#          default-label: main
-#          timeout: 5
-#          clone-on-start: true
-#          force-pull: true
+#        native:
+#          search-locations: classpath:/config
+        git:
+          uri: https://github.com/EunhoMoon/simple-bank-config.git
+          default-label: main
+          timeout: 5
+          clone-on-start: true
+          force-pull: true
+
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+
+encrypt:
+  key: sadklkvar123dslkvaj409tsdv
