--- a/loans/src/main/resources/application.yml
+++ b/loans/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
   profiles:
     active: prod
   config:
-    import: "configserver:http://localhost:8071/"
+    import: "${SPRING_CONFIG_IMPORT:configserver:http://localhost:8071/}"
   rabbitmq:
     host: localhost
     port: 5672
