--- a/loans/src/main/resources/application.yml
+++ b/loans/src/main/resources/application.yml
@@ -13,6 +13,21 @@ spring:
     port: 5672
     username: guest
     password: guest
+  datasource:
+    url: jdbc:mysql://localhost:3307/loans
+    username: root
+    password: root
+  jpa:
+    database-platform: org.hibernate.dialect.MySQLDialect
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    sql:
+      init:
+        mode: always
+    properties:
+      hibernate:
+        format_sql: true
 
 management:
   endpoints:
