--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,32 +5,44 @@ services:
       - "5672:5672"
       - "15672:15672"
     container_name: rabbitmq
-    deploy:
-      resources:
-        limits:
-          memory: 700m
-    networks:
-      - backend
+    extends:
+      file: common-config.yml
+      service: microservice-base-config
+
+  accounts-db:
+    image: mysql
+    container_name: accounts-db
+    ports:
+      - "3306:3306"
+    healthcheck:
+      test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost"]
+      timeout: 10s
+      retries: 10
+      interval: 10s
+      start_period: 10s
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: accounts
+    extends:
+      file: common-config.yml
+      service: microservice-base-config
 
   config-server:
     build: ./configserver
     ports:
       - "8071:8071"
     container_name: config-server
-    deploy:
-      resources:
-        limits:
-          memory: 700m
     environment:
       SPRING_RABBITMQ_HOST: "rabbitmq"
-    networks:
-      - backend
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8071/actuator/health"]
       interval: 10s
       timeout: 5s
       retries: 5
       start_period: 30s
+    extends:
+      file: common-config.yml
+      service: microservice-base-config
 
 
   accounts:
@@ -41,15 +53,12 @@ services:
     depends_on:
       config-server:
         condition: service_healthy
-    deploy:
-      resources:
-        limits:
-          memory: 700m
-    networks:
-      - backend
     environment:
       SPRING_RABBITMQ_HOST: "rabbitmq"
       SPRING_CONFIG_IMPORT: "configserver:http://config-server:8071/"
+    extends:
+      file: common-config.yml
+      service: microservice-base-config
 
   cards:
     build: ./cards
@@ -59,15 +68,12 @@ services:
     depends_on:
       config-server:
         condition: service_healthy
-    deploy:
-      resources:
-        limits:
-          memory: 700m
-    networks:
-      - backend
     environment:
       SPRING_CONFIG_IMPORT: "configserver:http://config-server:8071/"
       SPRING_RABBITMQ_HOST: "rabbitmq"
+    extends:
+      file: common-config.yml
+      service: microservice-base-config
 
   loans:
     build: ./loans
@@ -77,15 +83,12 @@ services:
     depends_on:
       config-server:
         condition: service_healthy
-    deploy:
-      resources:
-        limits:
-          memory: 700m
-    networks:
-      - backend
     environment:
       SPRING_CONFIG_IMPORT: "configserver:http://config-server:8071/"
       SPRING_RABBITMQ_HOST: "rabbitmq"
+    extends:
+      file: common-config.yml
+      service: microservice-base-config
 
 networks:
   backend:
