--- a/cards/src/main/resources/application.yml
+++ b/cards/src/main/resources/application.yml
@@ -29,11 +29,36 @@ spring:
       hibernate:
         format_sql: true
 
+eureka:
+  instance:
+    prefer-ip-address: true
+  client:
+    fetch-registry: true
+    register-with-eureka: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
+
 management:
   endpoints:
     web:
       exposure:
         include: "*"
+  endpoint:
+    shutdown:
+      enabled: true
+  info:
+    env:
+      enabled: true
+
+endpoints:
+  shutdown:
+    enabled: true
+
+info:
+  app:
+    name: cards
+    description: "Cards Microservice"
+    version: 1.0.0
 
 ---
 spring:
