--- a/loans/src/main/resources/application.yml
+++ b/loans/src/main/resources/application.yml
@@ -60,6 +60,11 @@ info:
     description: "Loans Microservice"
     version: 1.0.0
 
+logging:
+  level:
+    com:
+      motivank:
+        loans: DEBUG
 ---
 spring:
   config:
