--- a/gatewayserver/src/main/resources/application.yml
+++ b/gatewayserver/src/main/resources/application.yml
@@ -32,3 +32,9 @@ info:
     name: gatewayserver
     description: "Gateway Server"
     version: 1.0.0
+
+logging:
+  level:
+    com:
+      motivank:
+        gatewayserver: DEBUG
