--- a/cards/src/main/resources/application.yml
+++ b/cards/src/main/resources/application.yml
@@ -36,7 +36,7 @@ eureka:
     fetch-registry: true
     register-with-eureka: true
     service-url:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: "${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE:http://localhost:8761/eureka/}"
 
 management:
   endpoints:
@@ -46,8 +46,16 @@ management:
   endpoint:
     shutdown:
       enabled: true
+    health:
+      probes:
+        enabled: true
   info:
     env:
+      enabled: true
+  health:
+    readinessstate:
+      enabled: true
+    livenessstate:
       enabled: true
 
 endpoints:
