[feat] add circuitBreaker to gatewayserver and Fallback to Feign client

--- a/gatewayserver/src/main/resources/application.yml
+++ b/gatewayserver/src/main/resources/application.yml
@@ -51,6 +51,7 @@ logging:
       motivank:
         gatewayserver: DEBUG
 
+# Resilience4j Circuit Breaker 설정
 resilience4j:
   circuitbreaker:
     configs:
