--- a/accounts/src/main/resources/application.yml
+++ b/accounts/src/main/resources/application.yml
@@ -28,6 +28,11 @@ spring:
     properties:
       hibernate:
         format_sql: true
+# circuit breaker on Feign client
+  cloud:
+    openfeign:
+      circuitbreaker:
+        enabled: true
 
 eureka:
   instance:
@@ -74,6 +79,15 @@ logging:
       motivank:
         accounts: DEBUG
 
+# Resilience4j Circuit Breaker 설정
+resilience4j:
+  circuitbreaker:
+    configs:
+      default:
+        sliding-window-size: 10 # 몇 개의 호출을 기반으로 실패율을 계산할 것인지
+        permitted-number-of-calls-in-half-open-state: 2 # Half open 상태에서 허용할 호출 수
+        failure-rate-threshold: 50 # 실패율이 50% 이상이면 circuit open
+        wait-duration-in-open-state: 10000 # circuit open 상태에서 대기할 시간
 ---
 spring:
   config:
