--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,19 @@ services:
       file: common-config.yml
       service: microservice-base-config
 
+  redis:
+    image: redis
+    ports:
+      - "6379:6379"
+    container_name: redis
+    healthcheck:
+      test: [ "CMD", "redis-cli", "ping" ]
+      timeout: 10s
+      retries: 10
+    extends:
+      file: common-config.yml
+      service: network-deploy-service
+
   accounts-db:
     container_name: accounts-db
     ports:
@@ -146,12 +159,18 @@ services:
     container_name: gatewayserver
     environment:
       SPRING_APPLICATION_NAME: gatewayserver
+      SPRING_DATA_REDIS_CONNECTION_TIMEOUT: 2s
+      SPRING_DATA_REDIS_HOST: redis
+      SPRING_DATA_REDIS_PORT: 6379
+      SPRING_DATA_REDIS_TIMEOUT: 1s
     depends_on:
       accounts:
         condition: service_healthy
       cards:
         condition: service_healthy
       loans:
+        condition: service_healthy
+      redis:
         condition: service_healthy
     extends:
       file: common-config.yml
